# watspapp-rag-tool

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  docker-compose.aws.yml  docker-compose.oracle.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  prompt.txt  tenants-setup.txt  utputFormat
backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements.txt  verify_gemini.py
backend/app/: config.py  main.py
backend/app/api/: auth.py  documents.py  health.py  metrics.py  tenants.py  webhooks.py
backend/app/db/: __init__.py  faiss_store.py  models.py  mongo.py  postgres.py  redis.py
backend/app/models/: admin_user.py  bot_user.py  conversation.py  document.py  document_chunk.py  message.py  tenant.py  usage_snapshot.py
backend/app/providers/: telegram.py  whatsapp.py
backend/app/schemas/: __init__.py  admin_user.py  bot_user.py  conversation.py  document.py  document_chunk.py  message.py  tenant.py  usage_snapshot.py
backend/app/services/: bot_user_service.py  crypto.py  embeddings.py  ingestion.py  llm.py  psx_tools.py  rag.py  rate_limiter.py  transcription.py  usage_service.py  usage_worker.py
backend/indexes/38c49471-1445-4943-a1c2-df0d334271a6/: index.faiss  index.pkl
backend/indexes/69d6c4df437732e3ab67ba4a/: index.pkl
backend/indexes/69d6e071a743e77c7bda68cd/: index.faiss  index.pkl
backend/indexes/e9d80de4-99b8-489d-ad2e-3557bf47d1e2/: index.pkl
backend/scripts/: seed_admin.py
backend/tests/integration/: test_document_pipeline.py  test_telegram_webhook.py
(+43 files in other folders)
